<resources>
    <string name="app_name">Çaresaz</string>
    <string name="prompt_email">E-posta</string>
    <string name="prompt_password">Şifre</string>
    <string name="action_sign_in">Giriş Yap</string>
    <string name="action_sign_in_short">Giriş</string>
    <string name="error_invalid_email">Geçersiz E-posta Adresi</string>
    <string name="error_invalid_password">Şifre çok kısa</string>
    <string name="error_incorrect_password">Bu Şifre Yanlış</string>
    <string name="error_field_required">This field is required</string>
    <string name="kayit"><u>Kayıtlı Değil misin?</u></string>
    <string name="slogan">Kaybetme</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="kayitOl">Kayıt Ol</string>
    <string name="kayitIptal">İptal</string>
    <string name="dialogbaslik">Kayıt Ol</string>
    <string name="title_activity_ana_sayfa">Ana Sayfa</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_kullanici_profil">KullaniciProfil</string>
    <string name="tab_text_1">Paylaştıklarım</string>
    <string name="tab_text_2">Takipdekiler</string>
    <string name="msg_failed_to_get_intent_data">Failed to get intent data</string>
    <string name="kod_yardim">1 numara: Cihazla birlikte gelen aktivasyon kodunu giriniz.</string>
    <string name="resim_yardim">2 numara: Cihazınıza bir resim seçiniz</string>
    <string name="isim_yardim">3 numara: Cihaza vereceğiniz ismi yazınız.</string>
    <string name="tur_yardim">4 numara: Cihazın türünü seçiniz(bileklik,tasma).</string>
    <string name="cihaz_ekle">Cihaz Ekle</string>
    <string name="paylasimlar">Paylaşımlar</string>
    <string name="paylasim_ekle">Paylaşım Ekle</string>
    <string name="cikis">Çıkış Yap</string>
    <string name="cihaz_yok">Cihazınız bulunmamaktadır.</string>
    <string name="profil">Profil</string>
    <string name="bildirimler">Bildirimler</string>
    <string name="aktivasyon">Aktivasyon</string>
    <string name="ayarlar">Ayarlar</string>
    <string name="message">Mesajlar</string>
    <string name="aktivasyon_kodu">Aktivasyon kodu giriniz.</string>
    <string name="isim_gir">İsim giriniz.</string>
    <string name="paylasim_konusu">Paylaşım Konusu</string>
    <string name="il">İl</string>
    <string name="ilçe">İlçe</string>
    <string name="tarih">Tarih</string>
    <string name="foto_ekle">Fotoğraf Ekleyin</string>
    <string name="detay">Detay</string>
    <string name="paylas">Paylaş</string>
    <string name="konum">Konumunuz</string>
    <string name="cihazKonum">Cihazın Konumu:</string>
    <string name="cikissoru">Çıkış yapmak ister misin?</string>
    <string name="evet">Evet</string>
    <string name="hayir">Hayır</string>
    <string name="cihazlar">Cihazlarım</string>
    <string name="tamam">Tamam</string>
    <string name="isim">İsim</string>
    <string name="soyad">Soyad</string>
    <string name="sehir_seciniz">Şehir Seçiniz</string>
    <string name="kaydet">Kaydet</string>
    <string name="hakkımızda">Hakkımızda</string>
    <string name="yardım">Yardım</string>

    <string name="section_format">Hello World from section: %1$d</string>

    <!-- TODO: Remove or change tplaceholderrlder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
