<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_profil"
            android:icon="@drawable/user"
            android:title="@string/profil"/>
        <item
            android:id="@+id/nav_paylasimlar"
            android:icon="@drawable/cihazlarim"
            android:title="@string/paylasimlar" />
        <item
            android:id="@+id/nav_bildirim"
            android:icon="@drawable/bildirimler"
            android:title="@string/bildirimler"  />
        <item
            android:id="@+id/nav_aktivasyon"
            android:icon="@drawable/aktivasyon"
            android:title="@string/aktivasyon" />

        <item
            android:id="@+id/nav_manage"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/ayarlar"/>
        <item
            android:id="@+id/nav_send"
            android:icon="@drawable/ic_menu_send"
            android:title="@string/message" />
        <item
            android:id="@+id/nav_cikis"
            android:icon="@drawable/cikis"
            android:title="@string/cikis"/>
    </group>

    <item android:title="İletişim">
        <menu>
            <item
                android:id="@+id/nav_hakkimizda"
                android:icon="@drawable/hakkimizda"
                android:title="@string/hakkımızda" />
            <item
                android:id="@+id/nav_yardim"
                android:icon="@drawable/yardim"
                android:title="@string/yardım"/>



        </menu>
    </item>

</menu>
