<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="300dp"
    android:layout_height="500dp"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        app:srcCompat="@drawable/yardimekle" />

    <TextView
        android:id="@+id/kod"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:text=""
        android:textStyle="italic"
        tools:text="@string/kod_yardim" />

    <TextView
        android:id="@+id/resim"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:text="TextView"
        android:textStyle="italic"
        tools:text="@string/resim_yardim" />

    <TextView
        android:id="@+id/isim"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:text="TextView"
        android:textStyle="italic"
        tools:text="@string/isim_yardim" />

    <TextView
        android:id="@+id/tur"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:text="TextView"
        android:textStyle="italic"
        tools:text="@string/tur_yardim" />

    <Button
        android:id="@+id/tamam"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|center"
        android:layout_marginTop="20dp"
        android:background="@drawable/custom_gradient_button"
        android:text="@string/tamam"
        android:textColor="@android:color/white" />
</LinearLayout>