<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="@android:color/background_light"
    android:orientation="vertical"
    tools:context="com.hsn.caresaz.caresaz.GirisKayit">


    <ImageView
        android:id="@+id/turkey"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="320dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        app:srcCompat="@drawable/turkey" />

    <ImageView
        android:id="@+id/english"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="320dp"
        app:srcCompat="@drawable/language" />

    <ScrollView
        android:id="@+id/scroll_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginTop="50dp"
            android:background="@android:color/transparent"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent">

                <AutoCompleteTextView
                    android:id="@+id/eposta"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="@android:color/background_dark"
                    android:textColorLink="@android:color/background_dark" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent">

                <EditText
                    android:id="@+id/sifre"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_password"
                    android:imeActionId="6"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true" />

                <ImageView
                    android:id="@+id/sifreU"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_weight="1"
                    app:srcCompat="@android:drawable/ic_menu_help" />

                <Button
                    android:id="@+id/giris"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="50dp"
                    android:layout_marginRight="50dp"
                    android:layout_weight="1"
                    android:text="@string/action_sign_in_short"
                    android:background="@drawable/custom_gradient_button"
                    android:textColor="@android:color/background_light" />

            </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/kayit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:gravity="center_horizontal"
                android:singleLine="true"
                android:text="@string/kayit"
                android:textColor="@android:color/background_dark"
                android:textSize="14sp"
                android:textStyle="normal" />

        </LinearLayout>


    </ScrollView>

</LinearLayout>
